# alc-dls-exafs

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  Makefile  README.md  exafs_pipeline.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
larch_cli_wrapper/: __init__.py  cli.py  wrapper.py
larch_cli_wrapper/styles/: __init__.py  exafs_presentation.mplstyle  exafs_publication.mplstyle
notebooks/: exafs_pipeline.py  nanoparticle_builder.py
scripts/exp_nanoparticle_example/: Ag147.xyz  Ag55Au92.xyz  Au147.xyz  Au55Ag92.xyz  README.txt  dump_to_cif.py  dump_to_cif_multi.py  post_process_lammps.py  run_feff_multi.py  script  slurm-1558891.out
scripts/exp_nanoparticle_example/feff/: atoms.json  feff.inp  feff.pad  geom.json  libpotph.json  phase.pad  pot.json  pot.pad  test.inp  xsect.json  xsph.json
scripts/exp_nanoparticle_example/outputs/: Ag_cluster.lmp  Ag_cluster.xyz  first_structure.cif  initial_structure.lmp  output  slurm-1562731.out
scripts/larch_example/: Hematite.cif  run_feff.py
scripts/larch_example/feff/: README.md
scripts/larch_example/feff_reference/: atoms.json  feff.inp  feff.pad  geom.json  libpotph.json  path.json  phase.pad  pot.json  pot.pad  test.inp  xsect.json  xsph.json
scripts/nanoparticle_example/: README.txt  dump_production.xyz  dump_to_cif.py  lammpsIn_constP  run_feff.py  setup_cluster.py
src/larch_cli_wrapper/: __main__.py  cache_utils.py  cli.py  feff_utils.py  wrapper.py
src/larch_cli_wrapper/styles/: __init__.py
tests/: conftest.py  test_cli.py  test_cli_integration.py  test_cli_performance.py  test_cli_validation.py  test_feff_utils.py  test_larch_wrapper.py  test_wrapper.py
